# UML-Generator

./: LICENSE  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: db.py  main.py
backend/app/auth/: auth.py  password_hash.py
backend/app/db/: db.py
backend/app/schemas/: user.py
backend/backend.egg-info/: PKG-INFO  requires.txt
frontend/: .eslintrc.cjs  components.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatbotPanel.tsx  Hero.tsx  Navbar.tsx  PlaygroundHeader.tsx  Sidebar.tsx  UtilitySidebar.tsx  UtilitySidebarButton.tsx
frontend/src/components/EdgeTypes/: BasicEdges.tsx  IncludeExcludeEdge.tsx
frontend/src/components/NodeTypes/: ActorNode.tsx  SystemBoundaryNode.tsx  TextNode.tsx  UseCaseNode.tsx
frontend/src/components/ui/: sidebar.tsx
frontend/src/hooks/: useDiagramMutations.ts
frontend/src/pages/: ChatPage.tsx  Dashboard.tsx  Home.tsx  Login.tsx  Playground.tsx  SignUp.tsx
frontend/src/store/: chat-slice.ts  flow-slice.ts  index.ts
