[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "bcrypt==4.3.0",
    "black==25.1.0",
    "cffi==1.17.1",
    "click==8.2.1",
    "colorama==0.4.6",
    "cryptography==45.0.4",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "fastapi==0.115.12",
    "flake8==7.2.0",
    "greenlet==3.2.2",
    "h11==0.16.0",
    "httptools==0.6.4",
    "idna==3.10",
    "isort==6.0.1",
    "jwt==1.3.1",
    "langchain>=0.3.26",
    "langgraph>=0.4.8",
    "langsmith>=0.4.1",
    "mccabe==0.7.0",
    "mypy==1.15.0",
    "mypy-extensions==1.1.0",
    "packaging>=23.2,<24.0",
    "pathspec==0.12.1",
    "platformdirs==4.3.8",
    "pycodestyle==2.13.0",
    "pycparser==2.22",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pyflakes==3.3.2",
    "pyjwt==2.10.1",
    "pymongo==4.13.1",
    "python-dotenv==1.1.0",
    "pyyaml==6.0.2",
    "redis==6.2.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "starlette==0.46.2",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.1",
    "uvicorn==0.34.2",
    "watchfiles==1.0.5",
    "websockets==15.0.1",
]
